--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "node",
     "mongoose"
   ],
-  "author": "Roshan Kumar Sahu",
+  "author": "Sahil Chouhan",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.9"
